# webapi

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.deployment/: Dockerfile  docker-compose.yaml
.github/actions/verify/: action.yml
.github/workflows/: webapi-build.yml
app/: gunicorn_conf.py  logger.py  main.py  settings.py
app/db/: __init__.py
app/db/crud/: __init__.py  base.py  comments.py  user_forms.py  usercode_generator.py  users.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2025_11_04_2207-460ec7cf8bbf_add_users.py  2025_11_21_1237-71edd3a85c9c_add_user_forms.py  2025_12_09_0912-359a07c8cc6f_change_id_to_uuid.py  2025_12_11_1310-d6154b9f35ca_add_qrcode.py  2025_12_19_2251-66f35e04a00b_add_is_enabled_description.py  2025_12_21_1539-950bf2ee8ce9_add_comment_model.py  2026_01_12_1859-0bb0912895d2_added_tg_accounts_for_users_db.py  2026_01_31_1540-50ba6c9afce7_add_notify_email_enabled_mapped_bool_.py  2026_02_03_1529-b90ebe183a12_change_notify_email.py  2026_02_03_1532-80dfe94fb85f_return_notify_email_enabled.py  2026_02_14_1502-459ebeaa310c_autogenerated_migration.py  2026_03_04_1112-a1fb10af1d4e_in_auth_add_avatar_key.py  2026_03_19_1200-add_tg_link_fields.py
app/db/models/: __init__.py  comments.py  user_forms.py  users.py
app/dependencies/exceptions/: __init__.py  enums.py  http.py  utils.py
app/dependencies/http/: __init__.py  exceptions.py
app/managers/: __init__.py  auth.py  base.py  comments.py  pages_auth.py  user_forms.py  users.py
app/routers/: __init__.py
app/routers/api/: __init__.py  base.py
app/routers/api/auth/: __init__.py  router.py
app/routers/api/comments/: __init__.py  router.py
app/routers/api/public/: __init__.py  router.py
app/routers/api/shared/: __init__.py
app/routers/api/user_forms/: __init__.py  router.py
app/routers/api/users/: __init__.py  router.py
app/routers/html_pages/: __init__.py
app/routers/html_pages/auth/: __init__.py  router.py
app/routers/html_pages/comments/: __init__.py  router.py
app/routers/streaming/: __init__.py  account_linking.py
app/schemas/: base.py  mixins.py  validators.py
app/schemas/account_linking/: __init__.py  telegram_account_linking.py
app/schemas/auth/: __init__.py  auth.py
app/schemas/comments/: __init__.py  comments.py
app/schemas/qrcode/: __init__.py  qrcode.py
app/schemas/user_forms/: __init__.py  user_forms.py
app/schemas/users/: __init__.py  users.py
app/services/: __init__.py  auth.py  auth_proxy.py  base.py  minio.py  qrcode_client.py  rabbitmq.py
app/services/postgresql/: __init__.py  base_database.py  exceptions.py  postgresql.py  sqlalchemy.py
app/templates/: base.html
app/templates/comments/: create.html  get_list.html  get_one.html  update.html
app/templates/user_forms/: create.html  get_list.html  get_one.html  get_public.html  login.html  update.html
app/views/: __init__.py  utils.py
app/views/private_page/: __init__.py  user_forms.py
app/views/public_page/: __init__.py  comments.py  user_forms.py
dev/: init_database.py
dev/factories/: __init__.py  comments.py  user_forms.py  users.py
dev/fixtures/: add_test_data.py  db.py
dev/tests/: conftest.py  utils.py
dev/tests/integrations_tests/: test_comments.py  test_user_forms.py
dev/tests/managers_tests/: test_comments.py  test_user_forms.py
(+2 files in other folders)
